# shvtree

./: .ecrc  .gitlab-ci.yml  CHANGELOG.md  README.md  README.rst  flake.nix  pyproject.toml  release.sh
docs/: conf.py  device.rst  index.rst  tree.rst
docs/api/: check.rst  device.rst  index.rst  shvtree.rst  size.rst
shvtree/: __init__.py  load.py  method.py  namedset.py  node.py  shvtree.py  types.py  types_builtins.py
shvtree/check/: __init__.py  __main__.py  check.py
shvtree/device/: __init__.py  __main__.py  device.py  dummy.py
shvtree/size/: __init__.py  __main__.py
tests/: conftest.py  test_checks.py  test_load.py  test_load_types.py  test_namedset.py  test_types.py  tree1.yaml  tree2.json  tree3.yaml  trees.py
tests/device/: conftest.py  test_device.py  test_device_dummy.py
